[package]
name = "heartbeat2"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.*"
dirs = "4.0.*"
futures = "0.3.*"
nix = { version = "0.25.*", features = ["signal"], default-features = false }
sexp = "1.1.*"
signal-hook = "0.3.*"
signal-hook-tokio = { version = "0.3.*", features = ["futures-v0_3"] }
tmq = "0.3.*"
tokio = { version = "1.20.*", features = ["full"] }
